--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
             </section>
 
             <section class="pickerBox">  
-                <h2 id="topsec">Color Change API</h2>          
+                <h2 id="topsec">Color Change CDN</h2>          
                 <svg id="mySVG" xmlns="http://www.w3.org/2000/svg" version="1.0"  viewBox="0 0 300.000000 525.000000" preserveAspectRatio="xMidYMid meet">
                     <metadata>
                     Created by potrace 1.10, written by Peter Selinger 2001-2011
